--- a/training_code/stopline_mobileNet.ipynb
+++ b/training_code/stopline_mobileNet.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. 필요한 라이브러리 import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -18,6 +25,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. 데이터 준비\n",
+    "➡️ 초기 1회만 실행"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 파일 압축 해제"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -28,202 +50,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleted: ./data/VideoS3\\train_00000_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00001_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00002_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00003_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00004_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00005_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00006_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00007_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00008_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00009_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00010_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00011_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00012_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00013_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00014_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00015_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00016_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00017_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00018_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00019_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00020_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00021_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00022_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00023_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00024_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00025_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00026_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00027_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00028_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00029_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00030_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00031_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00032_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00033_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00034_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00035_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00036_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00037_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00038_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00039_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00040_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00041_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00042_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00043_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00044_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00045_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00046_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00047_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00048_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00049_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00050_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00051_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00052_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00053_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00054_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00055_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00056_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00057_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00058_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00059_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00060_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00061_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00062_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00063_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00064_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00065_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00066_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00067_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00068_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00069_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00070_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00071_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00072_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00073_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00074_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00075_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00076_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00077_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00078_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00079_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00080_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00081_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00082_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00083_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00084_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00085_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00086_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00087_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00088_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00089_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00090_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00091_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00092_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00093_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00094_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00095_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00096_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00097_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00098_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00099_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00100_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00101_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00102_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00103_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00104_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00105_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00106_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00107_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00108_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00109_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00110_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00111_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00112_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00113_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00114_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00115_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00116_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00117_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00118_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00119_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00120_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00121_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00122_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00123_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00124_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00125_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00126_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00127_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00128_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00129_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00130_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00131_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00132_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00133_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00134_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00135_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00136_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00137_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00138_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00139_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00140_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00141_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00142_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00143_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00144_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00145_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00146_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00147_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00148_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00149_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00150_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00151_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00152_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00153_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00154_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00155_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00156_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00157_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00158_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00159_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00160_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00161_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00162_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00163_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00164_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00165_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00166_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00167_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00168_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00169_090.png\n",
-      "Deleted: ./data/VideoS3\\train_00170_090.png\n"
-     ]
-    }
-   ],
    "source": [
-    "import os\n",
-    "\n",
-    "folder_path = './data/VideoS3'\n",
-    "\n",
-    "# 폴더 내의 파일 목록을 가져옴\n",
-    "file_list = os.listdir(folder_path)\n",
-    "\n",
-    "for file_name in file_list:\n",
-    "    if file_name[12:15] == '090':\n",
-    "        file_path = os.path.join(folder_path, file_name)\n",
-    "        # 파일 삭제\n",
-    "        os.remove(file_path)\n",
-    "        print(f\"Deleted: {file_path}\")"
+    "- 다른 파일의 압축 해제 및 데이터 병합"
    ]
   },
   {
@@ -308,6 +138,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 데이터의 분포 확인\n",
+    "- go/right/left/stop 별 이미지 데이터의 개수 확인\n",
+    "    - index: 090 ➡️ go\n",
+    "    - index: 135 ➡️ right\n",
+    "    - index: 045 ➡️ left\n",
+    "    - index: 180 ➡️ stop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -339,6 +181,15 @@
     "# 인덱스별 이미지 개수 출력\n",
     "for index, count in index_counter.items():\n",
     "    print(f'Index: {index}, Count: {count}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 데이터를 변수에 저장\n",
+    "- stop데이터 ➡️ stopline = 1으로 라벨링\n",
+    "- go/right/left데이터 ➡️ stopline = 0으로 라벨링"
    ]
   },
   {
@@ -376,9 +227,9 @@
     "    if fnmatch.fnmatch(filename, pattern):\n",
     "        file_path = os.path.join(data_dir, filename)\n",
     "        try:\n",
-    "            # 이미지 파일을 열어보려고 시도합니다.\n",
+    "            # 이미지 파일을 열어보려고 시도\n",
     "            with Image.open(file_path) as img:\n",
-    "                # 파일이 성공적으로 열렸다면 리스트에 추가합니다.\n",
+    "                # 파일이 성공적으로 열렸다면 리스트에 추가\n",
     "                image_paths.append(file_path)\n",
     "                if filename[12:15]=='180':\n",
     "                    stopline = 1\n",
@@ -386,11 +237,11 @@
     "                    stopline = 0\n",
     "                stopline_yesno.append(stopline)\n",
     "        except:\n",
-    "            # 파일 열기에 실패한 경우, 예외가 발생하고 해당 파일은 무시됩니다.\n",
+    "            # 파일 열기에 실패한 경우, 예외가 발생하고 해당 파일은 무시\n",
     "            print(f\"Failed to open {file_path}\")\n",
     "\n",
     "\n",
-    "# 이후 과정은 동일하게 진행됩니다.\n",
+    "# 이후 과정은 동일하게 진행\n",
     "image_index = 20\n",
     "plt.imshow(Image.open(image_paths[image_index]))\n",
     "print(\"image_path: %s\" % image_paths[image_index])\n",
@@ -399,6 +250,13 @@
     "df = pd.DataFrame()\n",
     "df['ImagePath'] = image_paths\n",
     "df['Stopline'] = stopline_yesno"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- stop과 non-stop 데이터의 분포 확인 "
    ]
   },
   {
@@ -418,8 +276,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# 데이터프레임 생성\n",
     "df = pd.DataFrame({\n",
     "    'ImagePath': image_paths,\n",
@@ -430,6 +286,20 @@
     "distribution = df['Stopline'].value_counts()\n",
     "\n",
     "print(distribution)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. 전처리 & 데이터 분리 & 모델 선언 & 모델 학습 & 평가 & 저장"
    ]
   },
   {
@@ -615,6 +485,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. 데이터 예측 시각화"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -704,13 +581,6 @@
     "    plt.axis('off')\n",
     "    plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
